--- a/package.json
+++ b/package.json
@@ -1,33 +1,67 @@
 {
-  "description": "A redis client pool",
+  "name": "ioredis-conn-pool",
+  "description": "A Redis connection pool implementation based on `ioredis` and `generic-pool`, designed to simplify the management of Redis client connections in Node.js applications.",
+  "version": "2.0.0",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.mjs",
+  "main": "dist/index.js",
+  "devDependencies": {
+    "@commitlint/cli": "^19.2.0",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@vitest/coverage-v8": "^3.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-fe": "^2.1.2",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "markdown-it-mathjax3": "^4.3.2",
+    "vite": "^6.2.6",
+    "vite-plugin-external": "^6.2.1",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.3.8",
+    "vitest": "^3.1.1"
+  },
   "scripts": {
-    "test": "node ./scripts/test.js"
+    "deps": "npm run clean && pnpm install",
+    "clean": "rm -rf node_modules",
+    "dev": "vite",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "build": "vite build",
+    "eslint": "eslint --ext .js,.mjs,.jsx,.ts,.tsx --fix --ignore-path .eslintignore ./",
+    "preview": "vite preview",
+    "test": "vitest run --coverage",
+    "example": "vite-node ./test/example.ts"
+  },
+  "files": [
+    "dist"
+  ],
+  "directories": {
+    "doc": "docs",
+    "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fengxinming/corie-redis-client.git"
+    "url": "git+ssh://git@github.com/fengxinming/ioredis-conn-pool.git"
   },
-  "author": "Jesse Feng",
+  "keywords": [
+    "redis",
+    "ioredis",
+    "redis-client",
+    "redis-pool"
+  ],
+  "author": "Jesse Feng <fxm0016@126.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fengxinming/corie-redis-client/issues"
+    "url": "https://github.com/fengxinming/ioredis-conn-pool/issues"
   },
-  "homepage": "https://github.com/fengxinming/corie-redis-client#readme",
+  "homepage": "https://fengxinming.github.io/ioredis-conn-pool",
   "dependencies": {
-    "clrsole": "^2.0.0",
-    "generic-pool": "^3.7.1",
-    "ioredis": "^4.14.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.6.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0"
+    "base-log-factory": "^2.1.2",
+    "blf-debug-appender": "^1.0.2",
+    "generic-pool": "^3.9.0",
+    "ioredis": "^5.6.1"
   }
 }
